fixed cards overspilling their containers

--- a/src/assets/sass/common/mixins/_common.sass
+++ b/src/assets/sass/common/mixins/_common.sass
@@ -44,6 +44,7 @@
 
 =osg-common-card
   position: relative
+  border: 1px solid transparent // Hack to make the content not spill over because of negative margins
   a
     text-decoration: none
   figure
